--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,7 @@ go:
 install:
 - # do nothing
 script:
-- go get -t -v ./...
-- go tool vet .
-- go test -v -race ./...
-- go build -o gitlab-runner-cleaner.sh main.go
+- make deps test build
 deploy:
   provider: releases
   skip_cleanup: true
